--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BRT - Realize seus projetos!">
     <link rel="stylesheet" href="style.css">
-    <title>BRT - Soluções Concretas</title>
+    <title>Bruno</title>
 </head>
 <body>
     <header class="cabecalho">
